legend flickering fix

--- a/frontend/src/app/dashboard/components/widget-loader/widget-loader.component.scss
+++ b/frontend/src/app/dashboard/components/widget-loader/widget-loader.component.scss
@@ -69,7 +69,6 @@
 
         // .mat-card-content.panel-body
         .panel-body {
-            overflow: hidden;
             // padding: 0 10px 10px;
             position: absolute;
             top: 28px;
